Fix signup modal z-index

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -19,6 +19,10 @@ a {
 	background-color: rgba(247, 247, 247, .7)
 }
 
+.navbar-inner {
+	z-index: 1000 !important;
+}
+
 /* Landing Page */
 
 /*img.landing-bg {
@@ -1038,7 +1042,7 @@ a {
 	border-radius: 4px;
 	background: #FEFFF0;
 	padding: 10px 15px;
-	z-index: 2000;
+	z-index: 1000;
 }
 
 #signup-cta-btn {
@@ -1074,7 +1078,7 @@ a {
 	background: rgba(247,247,247,1);
 	/* background: #FEFFF0; */
 	padding: 8px 15px;
-	z-index: 1;
+	z-index: 995;
 	text-align: center;
 }
 
